--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@
 .header{
     margin: 87px 120px 0;
 }
+
+/*navigation bar start*/
 .nav{
     display: flex;
     align-items: center;
@@ -42,5 +44,48 @@
     font-size: 16px;
     font-weight: 600;
 }
+/*navigation bar end*/
 
+/* banner start */
+.banner{
+    margin: 72px 0 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: var(--primary-font);
+    color: var(--color-1);
+}
+.banner-content{
+    width: 582px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.banner-content .title{
+    font-size: 52px;
+    font-weight: 700;
+}
+.banner-content .text{
+    font-size: 16px;
+    font-weight: 600;
+}
+.banner-content .btn{
+    background-color: #E02C6D;
+    color: #FFFFFF;
+    padding: 10px 24px;
+    border: none;
+    border-radius: 41px;
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    width: fit-content;
+}
 
+.banner-image{
+    background-image: url('../images/Circle\ design.svg');
+    background-position: center;
+    width: 440px;
+    height: 414px;
+}
