--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
 /* -----header end----- */
 
 
-/* -----main start----- */
+/* ----------main start---------- */
 
 /* -----brands section start----- */
 .brands{
@@ -126,10 +126,72 @@
 }
 /* -----brands section end----- */
 
+/* -----Popular collections start----- */
+.popular-collection{
+    margin: 100px 196px 0;
+}
+.popular-collection .title{
+    font-size: 28px;
+    font-weight: 600;
+    color: var(--primary-font);
+    width: fit-content;
+    margin: 0 auto;
+    padding: 1.3rem;
+}
+.collections{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 30px;
+}
+.product{
+    padding: 17px 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px #00000026;
+    width: fit-content;
+}
+.product img{
+    width: 100%;
+}
+.product-name{
+    margin-top: 16px;
+    font-size: 28px;
+    font-weight: 500;
+    color: #18191F;
+}
+.price{
+    margin-top: 6px;
+    font-family: var(--secondary-font);
+    font-size: 24px;
+    font-weight: 400;
+    color: #000000de;
+}
+.rating{
+    display: flex;
+    gap: 8px;
+    font-size: 14;
+    margin-top: 16px;
+}
+.rating p:first-child{
+    color: orange;
+}
+.rating p:last-child{
+    color: #6e6e6e;
+}
+.availability{
+    color: gray;
+    font-size: 14px;
+    width: 60%;
+}
+/* -----Popular collections end----- */
 
-/* ----------small device <576px---------- */
+
+
+
+
+/* ---------------small device <576px--------------- */
 @media only screen and (max-width:576px){
-    /* -----header start----- */
+    /* ----------header start---------- */
     .header{
         margin: 35px 16px 0;
     }
@@ -185,35 +247,18 @@
         width: 80%;
     }
     /* -----banner end----- */
-    /* -----header end----- */
+    /* ----------header end---------- */
 
 
-    /* -----main start----- */
+    /* ----------main start---------- */
 
+    /* -----brands start----- */
     .brands{
         margin: 50px 42px 0;
         border: none;
         padding: 0;
     }
-    .brands ul{
-        /* margin: 0; */
-        list-style-type: none;
-        display: grid;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        /* border: 1px soli; */
-        /* column-gap: 2rem; */
-        gap: 1rem 2rem;
-        grid-template-areas: 
-                            "alibaba alibaba alibaba amazon  amazon amazon daraz  daraz  daraz   ebay    ebay    ebay"
-                            "   .    rakuten rakuten rakuten target target target target walmart walmart walmart ."
-        ;
-    }
-    .brands li img{
-        /* max-width: 100%; */
-        max-height: 100%;
-    }
+
     .alibaba{grid-area: alibaba;}
     .amazon{grid-area: amazon;}
     .daraz{grid-area: daraz;}
@@ -221,5 +266,81 @@
     .rakuten{grid-area: rakuten;}
     .target{grid-area: target;}
     .walmart{grid-area: walmart;}
+
+    .brands ul{
+        list-style-type: none;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        gap: 1rem 2rem;
+        grid-template-areas: 
+                            "alibaba alibaba alibaba amazon  amazon amazon daraz  daraz  daraz   ebay    ebay    ebay"
+                            "   .    rakuten rakuten rakuten target target target target walmart walmart walmart ."
+        ;
+    }
+    .brands li img{
+        max-height: 100%;
+    }
+    /* -----brands end----- */
+
+    
+    /* -----Popular collections start----- */
+.popular-collection{
+    margin: 50px 0 0;
+}
+.popular-collection .title{
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--primary-font);
+    width: fit-content;
+    margin: 0 auto;
+}
+.collections{
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 15px;
+}
+.product{
+    padding: 17px 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px #00000026;
+    width: fit-content;
+}
+.product img{
+    width: 100%;
+}
+.product-name{
+    margin-top: 16px;
+    font-size: 28px;
+    font-weight: 700;
+    color: #18191F;
+}
+.price{
+    margin-top: 6px;
+    font-family: var(--secondary-font);
+    font-size: 24px;
+    font-weight: 700;
+    color: #000000de;
+}
+.rating{
+    display: flex;
+    gap: 8px;
+    font-size: 14;
+    margin-top: 16px;
+}
+.rating p:first-child{
+    color: orange;
+}
+.rating p:last-child{
+    color: #6e6e6e;
+}
+.availability{
+    color: gray;
+    font-size: 14px;
+    width: 60%;
+}
+/* -----Popular collections start----- */
 
 }
