--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 /* font inter */
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+/* font Manrope */
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 /* -----variables----- */
 :root{
     --primary-font:'Poppins', sans-serif;
     --secondary-font:'Inter', sans-serif;
+    --extra-font:'Manrope', sans-serif;
     --color-1:#3A3A3A;
 }
 /* -----common designs----- */
@@ -129,6 +132,7 @@
 /* -----Popular collections start----- */
 .popular-collection{
     margin: 100px 196px 0;
+    width: fit-content;
 }
 .popular-collection .title{
     font-size: 28px;
@@ -148,7 +152,7 @@
     padding: 17px 15px;
     border-radius: 5px;
     box-shadow: 0px 0px 40px #00000026;
-    width: fit-content;
+    /* width: fit-content; */
 }
 .product img{
     width: 100%;
@@ -183,7 +187,94 @@
     font-size: 14px;
     width: 60%;
 }
+.see-more{
+    display: flex;
+    justify-content: end;
+    margin-top: 50px;
+    width: 100%;
+}
+.see-more a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 700;
+    color: #e02c6dde;
+    display: block;
+    width: fit-content;
+}
 /* -----Popular collections end----- */
+
+/* -----Featured start----- */
+.featured{
+    display: flex;
+    margin: 100px 165px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 96px;
+}
+.featured img{
+    max-width: 100%;
+}
+.featured .description .title{
+    font-size: 38px;
+    font-weight: 700;
+    color: #0A0826;
+}
+.featured .description .text{
+    margin-top: 16px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #6C6C6C;
+}
+.featured .description .btn{
+    margin-top: 16px;
+    padding: 10px 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+    background-color: #E02C6D;
+    border: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+}
+/* -----Featured end----- */
+/* ----------Main end---------- */
+
+
+
+/* ----------Footer start---------- */
+.footer{
+    background-color: #0a0826;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.footer .content{
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.footer .content .headline{
+    font-size: 24px;
+    font-weight: 700;
+}
+.footer .content p{
+    font-size: 14px;
+    font-weight: 700;
+    font-family: var(--extra-font);
+    margin-top: 5px;
+}
+.footer .content .media{
+    font-size: 36px;
+    margin-top: 16px;
+    display: flex;
+    /* justify-content: space-between; */
+    justify-content: center;
+    gap: 16px;
+}
+/* ----------Footer end---------- */
 
 
 
@@ -191,6 +282,7 @@
 
 /* ---------------small device <576px--------------- */
 @media only screen and (max-width:576px){
+
     /* ----------header start---------- */
     .header{
         margin: 35px 16px 0;
@@ -250,6 +342,7 @@
     /* ----------header end---------- */
 
 
+    
     /* ----------main start---------- */
 
     /* -----brands start----- */
@@ -286,61 +379,102 @@
 
     
     /* -----Popular collections start----- */
-.popular-collection{
-    margin: 50px 0 0;
-}
-.popular-collection .title{
-    font-size: 16px;
-    font-weight: 600;
-    color: var(--primary-font);
-    width: fit-content;
-    margin: 0 auto;
-}
-.collections{
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: repeat(1,1fr);
-    gap: 15px;
-}
-.product{
-    padding: 17px 15px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 40px #00000026;
-    width: fit-content;
-}
-.product img{
-    width: 100%;
-}
-.product-name{
-    margin-top: 16px;
-    font-size: 28px;
-    font-weight: 700;
-    color: #18191F;
-}
-.price{
-    margin-top: 6px;
-    font-family: var(--secondary-font);
-    font-size: 24px;
-    font-weight: 700;
-    color: #000000de;
-}
-.rating{
-    display: flex;
-    gap: 8px;
-    font-size: 14;
-    margin-top: 16px;
-}
-.rating p:first-child{
-    color: orange;
-}
-.rating p:last-child{
-    color: #6e6e6e;
-}
-.availability{
-    color: gray;
-    font-size: 14px;
-    width: 60%;
-}
-/* -----Popular collections start----- */
+    .popular-collection{
+        margin: 50px auto 0;
+    }
+    .popular-collection .title{
+        font-size: 16px;
+        font-weight: 600;
+        color: var(--primary-font);
+        width: fit-content;
+        margin: 0 auto;
+    }
+    .collections{
+        margin-top: 20px;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 15px;
+    }
+    .product{
+        padding: 17px 15px;
+        border-radius: 5px;
+        box-shadow: 0px 0px 40px #00000026;
+        width: fit-content;
+    }
+    .product img{
+        width: 100%;
+    }
+    .product-name{
+        margin-top: 16px;
+        font-size: 28px;
+        font-weight: 700;
+        color: #18191F;
+    }
+    .price{
+        margin-top: 6px;
+        font-family: var(--secondary-font);
+        font-size: 24px;
+        font-weight: 700;
+        color: #000000de;
+    }
+    .rating{
+        display: flex;
+        gap: 8px;
+        font-size: 14;
+        margin-top: 16px;
+    }
+    .rating p:first-child{
+        color: orange;
+    }
+    .rating p:last-child{
+        color: #6e6e6e;
+    }
+    .availability{
+        color: gray;
+        font-size: 14px;
+        width: 60%;
+    }
+    /* -----Popular collections start----- */
 
+    /* -----Featured start----- */
+    .featured{
+        display: flex;
+        margin: 50px 30px;
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 96px;
+    }
+    .description{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .featured .description .title{
+        font-size: 38px;
+        font-weight: 700;
+        color: #0A0826;
+        text-align: center;
+    }
+    .featured .description .text{text-align: center;}
+    .featured .description .btn{margin-top: 2rem;}
+
+    /* -----Featured end----- */
+    /* ----------Main end---------- */
+
+
+
+
+
+
+    /* ----------Footer start---------- */
+    .footer .content .headline{
+        font-size: 16px;
+    }
+    .footer .content p{
+        font-size: 12px;
+    }
+    .footer .content .media{
+        font-size: 24px;
+    }
+    /* ----------Footer end---------- */
 }
